feature extractor paligemma

--- a/notebooks/prompting_results.ipynb
+++ b/notebooks/prompting_results.ipynb
@@ -13,7 +13,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "imports",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,13 +20,13 @@
     "import pandas as pd\n",
     "from sklearn.metrics import accuracy_score, f1_score, confusion_matrix, classification_report\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "load-data",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,284 +34,206 @@
     "import glob\n",
     "\n",
     "# Load all JSON files from a folder\n",
-    "results_folder = \"path/to/your/results/folder\"  # Update this path\n",
+    "results_folder = \"../results/paligemma2\"  # Update this path\n",
     "\n",
     "# Get all JSON files in the folder\n",
     "json_files = glob.glob(os.path.join(results_folder, \"*.json\"))\n",
     "print(f\"Found {len(json_files)} JSON files\")\n",
     "\n",
-    "# Load and combine all data\n",
-    "all_data = {}\n",
+    "# Load each file into a separate DataFrame\n",
+    "dataframes = {}\n",
     "for file_path in json_files:\n",
-    "    print(f\"Loading {os.path.basename(file_path)}...\")\n",
+    "    file_name = os.path.basename(file_path)\n",
+    "    print(f\"Loading {file_name}...\")\n",
+    "\n",
     "    with open(file_path, 'r') as f:\n",
     "        file_data = json.load(f)\n",
-    "        # Add filename info to each record for tracking\n",
-    "        for record in file_data:\n",
-    "            record['source_file'] = os.path.basename(file_path)\n",
-    "        all_data.extend(file_data)\n",
     "\n",
-    "print(f\"\\nTotal loaded examples: {len(all_data)}\")\n",
-    "data = all_data"
+    "    # Create DataFrame for this file\n",
+    "    df = pd.DataFrame(file_data)\n",
+    "\n",
+    "    # Add source file column for reference\n",
+    "    df['source_file'] = file_name\n",
+    "\n",
+    "    # Store DataFrame with filename as key (without .json extension)\n",
+    "    file_key = os.path.splitext(file_name)[0]\n",
+    "    dataframes[file_key] = df\n",
+    "\n",
+    "    print(f\"  -> {len(df)} examples loaded into DataFrame '{file_key}'\")\n",
+    "\n",
+    "print(f\"\\nCreated {len(dataframes)} separate DataFrames\")\n",
+    "\n",
+    "# Or iterate through them:\n",
+    "for file_key, df in dataframes.items():\n",
+    "    print(f\"{file_key}: {len(df)} examples\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "create-dataframe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert to DataFrame for easier analysis\n",
-    "df = pd.DataFrame(data)\n",
-    "print(f\"Dataset shape: {df.shape}\")\n",
-    "print(\"\\nFirst few examples:\")\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "convert-responses",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert responses to numeric format for evaluation\n",
-    "def response_to_numeric(response):\n",
-    "    \"\"\"Convert 'True'/'False' responses to 1/0\"\"\"\n",
-    "    if response.strip().lower() == 'true':\n",
-    "        return 1\n",
-    "    elif response.strip().lower() == 'false':\n",
-    "        return 0\n",
+    "def analyze_responses_comprehensive(df, file_key):\n",
+    "    \"\"\"Comprehensive analysis including model failures\"\"\"\n",
+    "\n",
+    "    # Categorize all responses\n",
+    "    df['response_category'] = df['response'].apply(lambda x:\n",
+    "        'true' if x.strip().lower() == 'true' else\n",
+    "        'false' if x.strip().lower() == 'false' else\n",
+    "        'no_prediction'\n",
+    "    )\n",
+    "\n",
+    "    # Calculate different accuracy metrics\n",
+    "    total_samples = len(df)\n",
+    "\n",
+    "    # Only valid predictions\n",
+    "    valid_df = df[df['response_category'].isin(['true', 'false'])].copy()\n",
+    "    valid_df['predicted'] = (valid_df['response_category'] == 'true').astype(int)\n",
+    "\n",
+    "    if len(valid_df) > 0:\n",
+    "        valid_accuracy = (valid_df['predicted'] == valid_df['label']).mean()\n",
     "    else:\n",
-    "        print(f\"Unexpected response: {response}\")\n",
-    "        return -1\n",
+    "        valid_accuracy = 0.0\n",
     "\n",
-    "df['predicted'] = df['response'].apply(response_to_numeric)\n",
+    "    # Conservative accuracy (treat no_prediction as wrong)\n",
+    "    df['predicted_conservative'] = df.apply(lambda row:\n",
+    "        1 if row['response_category'] == 'true' else\n",
+    "        0 if row['response_category'] == 'false' else\n",
+    "        1 - row['label']  # Opposite of true label\n",
+    "    , axis=1)\n",
     "\n",
-    "# Check for unexpected responses\n",
-    "unexpected_responses = df[df['predicted'] == -1]\n",
-    "if len(unexpected_responses) > 0:\n",
-    "    print(f\"Found {len(unexpected_responses)} unexpected responses\")\n",
-    "    print(unexpected_responses['response'].unique())\n",
-    "else:\n",
-    "    print(\"All responses are 'True' or 'False'\")"
+    "    conservative_accuracy = (df['predicted_conservative'] == df['label']).mean()\n",
+    "\n",
+    "    # Response breakdown\n",
+    "    response_counts = df['response_category'].value_counts()\n",
+    "\n",
+    "    results = {\n",
+    "        'total_samples': total_samples,\n",
+    "        'valid_predictions': len(valid_df),\n",
+    "        'no_predictions': len(df[df['response_category'] == 'no_prediction']),\n",
+    "        'valid_accuracy': valid_accuracy,\n",
+    "        'conservative_accuracy': conservative_accuracy,\n",
+    "        'no_prediction_rate': len(df[df['response_category'] == 'no_prediction']) / total_samples,\n",
+    "        'response_breakdown': response_counts.to_dict()\n",
+    "    }\n",
+    "\n",
+    "    return results, valid_df\n",
+    "\n",
+    "# Analyze all dataframes\n",
+    "analysis_results = {}\n",
+    "valid_dataframes = {}\n",
+    "\n",
+    "for file_key, df in dataframes.items():\n",
+    "    print(f\"\\n{file_key}:\")\n",
+    "    results, valid_df = analyze_responses_comprehensive(df, file_key)\n",
+    "\n",
+    "    print(f\"  Total samples: {results['total_samples']:,}\")\n",
+    "    print(f\"  Valid predictions: {results['valid_predictions']:,} ({results['valid_predictions']/results['total_samples']*100:.1f}%)\")\n",
+    "    print(f\"  No predictions: {results['no_predictions']:,} ({results['no_prediction_rate']*100:.1f}%)\")\n",
+    "    print(f\"  Valid accuracy: {results['valid_accuracy']:.3f}\")\n",
+    "    print(f\"  Conservative accuracy: {results['conservative_accuracy']:.3f}\")\n",
+    "\n",
+    "    analysis_results[file_key] = results\n",
+    "    valid_dataframes[file_key] = valid_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "clean-data",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove any rows with unexpected responses\n",
-    "df_clean = df[df['predicted'] != -1].copy()\n",
-    "print(f\"Clean dataset shape: {df_clean.shape}\")\n",
+    "# Create F1 score visualization\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(15, 6))\n",
     "\n",
-    "# Extract true labels and predictions\n",
-    "y_true = df_clean['label'].values\n",
-    "y_pred = df_clean['predicted'].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "calculate-metrics",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate metrics\n",
-    "accuracy = accuracy_score(y_true, y_pred)\n",
-    "f1 = f1_score(y_true, y_pred)\n",
+    "# Extract data for plotting\n",
+    "attributes = list(f1_results.keys())\n",
+    "f1_scores = [f1_results[attr]['f1_score'] for attr in attributes]\n",
+    "accuracies = [f1_results[attr]['accuracy'] for attr in attributes]\n",
     "\n",
-    "print(f\"Accuracy: {accuracy:.4f}\")\n",
-    "print(f\"F1 Score: {f1:.4f}\")\n",
+    "# Plot 1: F1 Scores\n",
+    "bars1 = ax1.bar(attributes, f1_scores, color='skyblue', alpha=0.7)\n",
+    "ax1.set_title('F1 Scores by Attribute', fontsize=14, fontweight='bold')\n",
+    "ax1.set_ylabel('F1 Score', fontsize=12)\n",
+    "ax1.set_xlabel('Attribute', fontsize=12)\n",
+    "ax1.tick_params(axis='x', rotation=45)\n",
+    "ax1.set_ylim(0, 1)\n",
+    "ax1.grid(axis='y', alpha=0.3)\n",
     "\n",
-    "# Detailed classification report\n",
-    "print(\"\\nClassification Report:\")\n",
-    "print(classification_report(y_true, y_pred, target_names=['False', 'True']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "confusion-matrix",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Confusion Matrix\n",
-    "cm = confusion_matrix(y_true, y_pred)\n",
+    "# Add value labels on bars\n",
+    "for bar, score in zip(bars1, f1_scores):\n",
+    "    height = bar.get_height()\n",
+    "    ax1.text(bar.get_x() + bar.get_width()/2., height + 0.01,\n",
+    "             f'{score:.3f}', ha='center', va='bottom', fontweight='bold')\n",
     "\n",
-    "plt.figure(figsize=(8, 6))\n",
-    "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', \n",
-    "            xticklabels=['Predicted False', 'Predicted True'],\n",
-    "            yticklabels=['Actual False', 'Actual True'])\n",
-    "plt.title('Confusion Matrix')\n",
-    "plt.ylabel('True Label')\n",
-    "plt.xlabel('Predicted Label')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "distribution-plots",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Distribution of responses\n",
-    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 4))\n",
+    "# Plot 2: F1 vs Accuracy comparison\n",
+    "bars2 = ax2.bar(range(len(attributes)), f1_scores, width=0.4, label='F1 Score', \n",
+    "                color='skyblue', alpha=0.7)\n",
+    "bars3 = ax2.bar([x + 0.4 for x in range(len(attributes))], accuracies, width=0.4, \n",
+    "                label='Accuracy', color='lightcoral', alpha=0.7)\n",
     "\n",
-    "# True labels distribution\n",
-    "df_clean['label'].value_counts().plot(kind='bar', ax=ax1, color=['red', 'green'])\n",
-    "ax1.set_title('Distribution of True Labels')\n",
-    "ax1.set_xlabel('Label')\n",
-    "ax1.set_ylabel('Count')\n",
-    "ax1.set_xticklabels(['False (0)', 'True (1)'], rotation=0)\n",
-    "\n",
-    "# Predicted labels distribution\n",
-    "df_clean['predicted'].value_counts().plot(kind='bar', ax=ax2, color=['red', 'green'])\n",
-    "ax2.set_title('Distribution of Predictions')\n",
-    "ax2.set_xlabel('Prediction')\n",
-    "ax2.set_ylabel('Count')\n",
-    "ax2.set_xticklabels(['False (0)', 'True (1)'], rotation=0)\n",
+    "ax2.set_title('F1 Score vs Accuracy Comparison', fontsize=14, fontweight='bold')\n",
+    "ax2.set_ylabel('Score', fontsize=12)\n",
+    "ax2.set_xlabel('Attribute', fontsize=12)\n",
+    "ax2.set_xticks([x + 0.2 for x in range(len(attributes))])\n",
+    "ax2.set_xticklabels(attributes, rotation=45)\n",
+    "ax2.set_ylim(0, 1)\n",
+    "ax2.legend()\n",
+    "ax2.grid(axis='y', alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# Print summary statistics\n",
+    "print(f\"\\nF1 Score Summary:\")\n",
+    "print(f\"Mean F1: {np.mean(f1_scores):.3f}\")\n",
+    "print(f\"Std F1:  {np.std(f1_scores):.3f}\")\n",
+    "print(f\"Min F1:  {np.min(f1_scores):.3f} ({attributes[np.argmin(f1_scores)]})\")\n",
+    "print(f\"Max F1:  {np.max(f1_scores):.3f} ({attributes[np.argmax(f1_scores)]})\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "attribute-analysis",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Analysis by attribute\n",
-    "print(\"Performance by attribute:\")\n",
-    "attribute_results = []\n",
+    "# Calculate F1 scores for all attributes\n",
+    "f1_results = {}\n",
     "\n",
-    "for attr in df_clean['attribute'].unique():\n",
-    "    attr_data = df_clean[df_clean['attribute'] == attr]\n",
-    "    attr_accuracy = accuracy_score(attr_data['label'], attr_data['predicted'])\n",
-    "    attr_f1 = f1_score(attr_data['label'], attr_data['predicted'])\n",
-    "    \n",
-    "    attribute_results.append({\n",
-    "        'attribute': attr,\n",
-    "        'count': len(attr_data),\n",
-    "        'accuracy': attr_accuracy,\n",
-    "        'f1_score': attr_f1\n",
-    "    })\n",
-    "    \n",
-    "    print(f\"{attr}: {len(attr_data)} examples, Accuracy: {attr_accuracy:.4f}, F1: {attr_f1:.4f}\")\n",
-    "\n",
-    "# Convert to DataFrame for visualization\n",
-    "attr_df = pd.DataFrame(attribute_results)\n",
-    "attr_df = attr_df.sort_values('accuracy', ascending=False)\n",
-    "\n",
-    "# Analysis by source file (if applicable)\n",
-    "if 'source_file' in df_clean.columns:\n",
-    "    print(\"\\n\\nPerformance by source file:\")\n",
-    "    file_results = []\n",
-    "    \n",
-    "    for file_name in df_clean['source_file'].unique():\n",
-    "        file_data = df_clean[df_clean['source_file'] == file_name]\n",
-    "        file_accuracy = accuracy_score(file_data['label'], file_data['predicted'])\n",
-    "        file_f1 = f1_score(file_data['label'], file_data['predicted'])\n",
+    "for file_key, valid_df in valid_dataframes.items():\n",
+    "    if len(valid_df) > 0:\n",
+    "        # Calculate F1 score\n",
+    "        f1 = f1_score(valid_df['label'], valid_df['predicted'])\n",
+    "        accuracy = accuracy_score(valid_df['label'], valid_df['predicted'])\n",
     "        \n",
-    "        file_results.append({\n",
-    "            'source_file': file_name,\n",
-    "            'count': len(file_data),\n",
-    "            'accuracy': file_accuracy,\n",
-    "            'f1_score': file_f1\n",
-    "        })\n",
+    "        # Clean attribute name (remove filename prefix)\n",
+    "        if 'hf_inference_results_' in file_key:\n",
+    "            attribute_name = file_key.replace('hf_inference_results_', '')\n",
+    "        else:\n",
+    "            attribute_name = file_key\n",
     "        \n",
-    "        print(f\"{file_name}: {len(file_data)} examples, Accuracy: {file_accuracy:.4f}, F1: {file_f1:.4f}\")\n",
-    "    \n",
-    "    file_df = pd.DataFrame(file_results)\n",
-    "    file_df = file_df.sort_values('accuracy', ascending=False)\n",
+    "        f1_results[attribute_name] = {\n",
+    "            'f1_score': f1,\n",
+    "            'accuracy': accuracy,\n",
+    "            'valid_samples': len(valid_df),\n",
+    "            'total_samples': analysis_results[file_key]['total_samples']\n",
+    "        }\n",
     "\n",
-    "attr_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "attribute-visualization",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Visualize performance by attribute\n",
-    "fig, axes = plt.subplots(2, 2, figsize=(15, 12))\n",
+    "# Display F1 results\n",
+    "print(\"F1 Scores by Attribute:\")\n",
+    "print(\"-\" * 50)\n",
+    "for attr, metrics in f1_results.items():\n",
+    "    print(f\"{attr:<20} F1: {metrics['f1_score']:.3f}  Acc: {metrics['accuracy']:.3f}  ({metrics['valid_samples']}/{metrics['total_samples']} samples)\")\n",
     "\n",
-    "# Accuracy by attribute\n",
-    "attr_df.plot(x='attribute', y='accuracy', kind='bar', ax=axes[0,0], color='skyblue')\n",
-    "axes[0,0].set_title('Accuracy by Attribute')\n",
-    "axes[0,0].set_ylabel('Accuracy')\n",
-    "axes[0,0].tick_params(axis='x', rotation=45)\n",
-    "axes[0,0].set_ylim(0, 1)\n",
-    "\n",
-    "# F1 score by attribute\n",
-    "attr_df.plot(x='attribute', y='f1_score', kind='bar', ax=axes[0,1], color='lightcoral')\n",
-    "axes[0,1].set_title('F1 Score by Attribute')\n",
-    "axes[0,1].set_ylabel('F1 Score')\n",
-    "axes[0,1].set_xlabel('Attribute')\n",
-    "axes[0,1].tick_params(axis='x', rotation=45)\n",
-    "axes[0,1].set_ylim(0, 1)\n",
-    "\n",
-    "# Performance by source file (if available)\n",
-    "if 'source_file' in df_clean.columns and len(file_df) > 1:\n",
-    "    # Accuracy by file\n",
-    "    file_df.plot(x='source_file', y='accuracy', kind='bar', ax=axes[1,0], color='lightgreen')\n",
-    "    axes[1,0].set_title('Accuracy by Source File')\n",
-    "    axes[1,0].set_ylabel('Accuracy')\n",
-    "    axes[1,0].tick_params(axis='x', rotation=45)\n",
-    "    axes[1,0].set_ylim(0, 1)\n",
-    "    \n",
-    "    # F1 by file\n",
-    "    file_df.plot(x='source_file', y='f1_score', kind='bar', ax=axes[1,1], color='orange')\n",
-    "    axes[1,1].set_title('F1 Score by Source File')\n",
-    "    axes[1,1].set_ylabel('F1 Score')\n",
-    "    axes[1,1].set_xlabel('Source File')\n",
-    "    axes[1,1].tick_params(axis='x', rotation=45)\n",
-    "    axes[1,1].set_ylim(0, 1)\n",
-    "else:\n",
-    "    # Hide unused subplots if no file data\n",
-    "    axes[1,0].set_visible(False)\n",
-    "    axes[1,1].set_visible(False)\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "summary",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Summary statistics\n",
-    "print(\"\\n=== SUMMARY ===\")\n",
-    "print(f\"Total examples: {len(df)}\")\n",
-    "print(f\"Clean examples: {len(df_clean)}\")\n",
-    "print(f\"Overall Accuracy: {accuracy:.4f} ({accuracy*100:.2f}%)\")\n",
-    "print(f\"Overall F1 Score: {f1:.4f}\")\n",
-    "print(f\"Number of unique attributes: {len(df_clean['attribute'].unique())}\")\n",
-    "print(f\"Best performing attribute: {attr_df.iloc[0]['attribute']} (Accuracy: {attr_df.iloc[0]['accuracy']:.4f})\")\n",
-    "print(f\"Worst performing attribute: {attr_df.iloc[-1]['attribute']} (Accuracy: {attr_df.iloc[-1]['accuracy']:.4f})\")\n",
-    "\n",
-    "if 'source_file' in df_clean.columns and len(file_df) > 1:\n",
-    "    print(f\"\\nNumber of source files: {len(file_df)}\")\n",
-    "    print(f\"Best performing file: {file_df.iloc[0]['source_file']} (Accuracy: {file_df.iloc[0]['accuracy']:.4f})\")\n",
-    "    print(f\"Worst performing file: {file_df.iloc[-1]['source_file']} (Accuracy: {file_df.iloc[-1]['accuracy']:.4f})\")"
+    "f1_results"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "compmech",
    "language": "python",
    "name": "python3"
   },
@@ -326,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
