fixing qwen extraction

--- a/notebooks/probe_analysis.ipynb
+++ b/notebooks/probe_analysis.ipynb
@@ -670,13 +670,13 @@
     "            category_groups[category] = []\n",
     "        category_groups[category].append((attr, score, baseline))\n",
     "\n",
-    "    # Sort categories by their mean performance\n",
-    "    category_means = {\n",
-    "        cat: np.mean([score for _, score, _ in attrs])\n",
-    "        for cat, attrs in category_groups.items()\n",
-    "    }\n",
-    "    sorted_categories = sorted(category_means.items(), key=lambda x: x[1], reverse=True)\n",
-    "    category_order = [cat for cat, _ in sorted_categories]\n",
+    "    # Fixed category order for presentation and comparison\n",
+    "    fixed_category_order = [\"animal\", \"bird\", \"food\", \"vehicle\", \"flies\", \"legs\"]\n",
+    "    \n",
+    "    # Add any additional categories not in the fixed order at the end\n",
+    "    all_categories = set(category_groups.keys())\n",
+    "    additional_categories = sorted(all_categories - set(fixed_category_order))\n",
+    "    category_order = [cat for cat in fixed_category_order if cat in category_groups] + additional_categories\n",
     "\n",
     "    # Sort attributes within each category by score\n",
     "    for cat in category_groups:\n",
@@ -727,6 +727,18 @@
     "        linewidth=0.5,\n",
     "    )\n",
     "\n",
+    "    # Add percentage labels on top of bars\n",
+    "    for i, (bar, score) in enumerate(zip(bars, scores)):\n",
+    "        plt.text(\n",
+    "            bar.get_x() + bar.get_width() / 2,\n",
+    "            bar.get_height() + max(scores) * 0.01,  # Slight offset above the bar\n",
+    "            f\"{score:.1f}%\",\n",
+    "            ha=\"center\",\n",
+    "            va=\"bottom\",\n",
+    "            fontsize=10,\n",
+    "            fontweight=\"bold\",\n",
+    "        )\n",
+    "\n",
     "    # Add baseline markers\n",
     "    for i, baseline in enumerate(baselines):\n",
     "        plt.plot(\n",
@@ -752,12 +764,12 @@
     "        current_cat = cat\n",
     "\n",
     "    # Add category labels at the top\n",
-    "    y_max = max(scores) * 1.1\n",
+    "    y_max = max(scores) * 1.15  # Increased to accommodate percentage labels\n",
     "    for cat, positions in cat_positions.items():\n",
     "        center_pos = (min(positions) + max(positions)) / 2\n",
     "        plt.text(\n",
     "            center_pos,\n",
-    "            y_max * 0.95,\n",
+    "            y_max * 0.92,  # Adjusted position\n",
     "            cat,\n",
     "            ha=\"center\",\n",
     "            va=\"center\",\n",
@@ -775,14 +787,14 @@
     "    plt.xlabel(\"Attributes (grouped by category)\", fontsize=12)\n",
     "    plt.ylabel(f\"{metric.upper()} Score (%)\", fontsize=12)\n",
     "    plt.title(\n",
-    "        f\"Top {top_n_per_category} Attributes per Category (Layer {layer})\",\n",
-    "        fontsize=14,\n",
+    "        f\"Top {top_n_per_category} Attributes per Category (Layer {layer}) - Paligemma2\",\n",
+    "        fontsize=20,\n",
     "    )\n",
     "    plt.grid(True, alpha=0.3, axis=\"y\")\n",
     "\n",
     "    # Set x-axis labels\n",
-    "    plt.xticks(x_pos, attributes, rotation=90, ha=\"right\", fontsize=8)\n",
-    "    plt.ylim(0, y_max)\n",
+    "    plt.xticks(x_pos, attributes, rotation=45, ha=\"right\", fontsize=14, fontweight='bold')\n",
+    "    plt.ylim(0, 110)\n",
     "    \n",
     "    plt.tight_layout()\n",
     "\n",
