--- a/notebooks/prompting_results.ipynb
+++ b/notebooks/prompting_results.ipynb
@@ -144,90 +144,160 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate F1 scores for all attributes\n",
-    "f1_results = {}\n",
+    "# Load taxonomy for color coding\n",
+    "TAXONOMY_FILE = \"../dataset/mcrae-x-things-taxonomy-simp.json\"\n",
     "\n",
-    "for file_key, valid_df in valid_dataframes.items():\n",
-    "    if len(valid_df) > 0:\n",
-    "        # Calculate F1 score\n",
-    "        f1 = f1_score(valid_df['label'], valid_df['predicted'])\n",
-    "        accuracy = accuracy_score(valid_df['label'], valid_df['predicted'])\n",
+    "def load_taxonomy(taxonomy_file):\n",
+    "    \"\"\"Load taxonomy file.\"\"\"\n",
+    "    with open(taxonomy_file, \"r\") as f:\n",
+    "        return json.load(f)\n",
+    "\n",
+    "taxonomy = load_taxonomy(TAXONOMY_FILE)\n",
+    "print(f\"Loaded taxonomy with {len(taxonomy)} attributes\")\n",
+    "print(f\"Categories: {sorted(set(taxonomy.values()))}\")\n",
+    "\n",
+    "# Fixed category order for presentation\n",
+    "fixed_category_order = [\n",
+    "    \"an_animal\",\n",
+    "    \"a_bird\", \n",
+    "    \"a_food\",\n",
+    "    \"a_vehicle\",\n",
+    "    \"beh_-_flies\",\n",
+    "    \"has_legs\",\n",
+    "]\n",
+    "\n",
+    "# Get attributes for F1 visualization with taxonomy-based color coding\n",
+    "attributes_with_categories = []\n",
+    "f1_scores_ordered = []\n",
+    "categories_ordered = []\n",
+    "\n",
+    "# First, add attributes in the fixed category order\n",
+    "for category in fixed_category_order:\n",
+    "    category_attrs = [(attr, f1_results[attr]['f1_score']) for attr in f1_results.keys() \n",
+    "                     if taxonomy.get(attr) == category]\n",
+    "    # Sort attributes within category by F1 score (descending)\n",
+    "    category_attrs.sort(key=lambda x: x[1], reverse=True)\n",
+    "    \n",
+    "    for attr, f1_score in category_attrs:\n",
+    "        attributes_with_categories.append(attr)\n",
+    "        f1_scores_ordered.append(f1_score)\n",
+    "        categories_ordered.append(category)\n",
+    "\n",
+    "# Add any remaining attributes not in fixed order\n",
+    "remaining_categories = set(taxonomy.get(attr) for attr in f1_results.keys()) - set(fixed_category_order)\n",
+    "for category in sorted(remaining_categories):\n",
+    "    if category:  # Skip None values\n",
+    "        category_attrs = [(attr, f1_results[attr]['f1_score']) for attr in f1_results.keys() \n",
+    "                         if taxonomy.get(attr) == category]\n",
+    "        category_attrs.sort(key=lambda x: x[1], reverse=True)\n",
     "        \n",
-    "        # Clean attribute name (remove filename prefix)\n",
-    "        if 'hf_inference_results_' in file_key:\n",
-    "            attribute_name = file_key.replace('hf_inference_results_', '')\n",
-    "        else:\n",
-    "            attribute_name = file_key\n",
-    "        \n",
-    "        f1_results[attribute_name] = {\n",
-    "            'f1_score': f1,\n",
-    "            'accuracy': accuracy,\n",
-    "            'valid_samples': len(valid_df),\n",
-    "            'total_samples': analysis_results[file_key]['total_samples']\n",
-    "        }\n",
+    "        for attr, f1_score in category_attrs:\n",
+    "            attributes_with_categories.append(attr)\n",
+    "            f1_scores_ordered.append(f1_score)\n",
+    "            categories_ordered.append(category)\n",
     "\n",
-    "# Display F1 results\n",
-    "print(\"F1 Scores by Attribute:\")\n",
-    "print(\"-\" * 50)\n",
-    "for attr, metrics in f1_results.items():\n",
-    "    print(f\"{attr:<20} F1: {metrics['f1_score']:.3f}  Acc: {metrics['accuracy']:.3f}  ({metrics['valid_samples']}/{metrics['total_samples']} samples)\")\n",
+    "# Get unique categories and assign colors\n",
+    "unique_categories = []\n",
+    "for cat in fixed_category_order:\n",
+    "    if cat in categories_ordered:\n",
+    "        unique_categories.append(cat)\n",
     "\n",
-    "f1_results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create F1 score visualization\n",
-    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(15, 6))\n",
+    "# Add any additional categories\n",
+    "for cat in categories_ordered:\n",
+    "    if cat not in unique_categories:\n",
+    "        unique_categories.append(cat)\n",
     "\n",
-    "# Extract data for plotting\n",
-    "attributes = list(f1_results.keys())\n",
-    "f1_scores = [f1_results[attr]['f1_score'] for attr in attributes]\n",
-    "accuracies = [f1_results[attr]['accuracy'] for attr in attributes]\n",
+    "category_colors = dict(\n",
+    "    zip(unique_categories, plt.cm.Set3(np.linspace(0, 1, len(unique_categories))))\n",
+    ")\n",
     "\n",
-    "# Plot 1: F1 Scores\n",
-    "bars1 = ax1.bar(attributes, f1_scores, color='skyblue', alpha=0.7)\n",
-    "ax1.set_title('F1 Scores by Attribute', fontsize=14, fontweight='bold')\n",
-    "ax1.set_ylabel('F1 Score', fontsize=12)\n",
-    "ax1.set_xlabel('Attribute', fontsize=12)\n",
-    "ax1.tick_params(axis='x', rotation=45)\n",
-    "ax1.set_ylim(0, 1)\n",
-    "ax1.grid(axis='y', alpha=0.3)\n",
+    "# Create single F1 score plot\n",
+    "plt.figure(figsize=(20, 10))\n",
+    "x_pos = range(len(attributes_with_categories))\n",
+    "bar_colors = [category_colors[cat] for cat in categories_ordered]\n",
     "\n",
-    "# Add value labels on bars\n",
-    "for bar, score in zip(bars1, f1_scores):\n",
-    "    height = bar.get_height()\n",
-    "    ax1.text(bar.get_x() + bar.get_width()/2., height + 0.01,\n",
-    "             f'{score:.3f}', ha='center', va='bottom', fontweight='bold')\n",
+    "# Create bars\n",
+    "bars = plt.bar(\n",
+    "    x_pos,\n",
+    "    [score * 100 for score in f1_scores_ordered],  # Convert to percentage\n",
+    "    color=bar_colors,\n",
+    "    alpha=0.7,\n",
+    "    edgecolor=\"black\",\n",
+    "    linewidth=0.5,\n",
+    ")\n",
     "\n",
-    "# Plot 2: F1 vs Accuracy comparison\n",
-    "bars2 = ax2.bar(range(len(attributes)), f1_scores, width=0.4, label='F1 Score', \n",
-    "                color='skyblue', alpha=0.7)\n",
-    "bars3 = ax2.bar([x + 0.4 for x in range(len(attributes))], accuracies, width=0.4, \n",
-    "                label='Accuracy', color='lightcoral', alpha=0.7)\n",
+    "# Add percentage labels on top of bars\n",
+    "for i, (bar, score) in enumerate(zip(bars, f1_scores_ordered)):\n",
+    "    plt.text(\n",
+    "        bar.get_x() + bar.get_width() / 2,\n",
+    "        bar.get_height() + max(f1_scores_ordered) * 100 * 0.01,\n",
+    "        f\"{score * 100:.1f}%\",\n",
+    "        ha=\"center\",\n",
+    "        va=\"bottom\",\n",
+    "        fontsize=10,\n",
+    "        fontweight=\"bold\",\n",
+    "    )\n",
     "\n",
-    "ax2.set_title('F1 Score vs Accuracy Comparison', fontsize=14, fontweight='bold')\n",
-    "ax2.set_ylabel('Score', fontsize=12)\n",
-    "ax2.set_xlabel('Attribute', fontsize=12)\n",
-    "ax2.set_xticks([x + 0.2 for x in range(len(attributes))])\n",
-    "ax2.set_xticklabels(attributes, rotation=45)\n",
-    "ax2.set_ylim(0, 1)\n",
-    "ax2.legend()\n",
-    "ax2.grid(axis='y', alpha=0.3)\n",
+    "# Add category separators and labels\n",
+    "current_cat = None\n",
+    "cat_positions = {}\n",
+    "\n",
+    "for i, cat in enumerate(categories_ordered):\n",
+    "    if cat not in cat_positions:\n",
+    "        cat_positions[cat] = []\n",
+    "    cat_positions[cat].append(i)\n",
+    "\n",
+    "    if current_cat is not None and cat != current_cat:\n",
+    "        plt.axvline(x=i - 0.5, color=\"gray\", linestyle=\"-\", linewidth=2, alpha=0.6)\n",
+    "    current_cat = cat\n",
+    "\n",
+    "# Add category labels at the top\n",
+    "y_max = max(f1_scores_ordered) * 100 * 1.15\n",
+    "for cat, positions in cat_positions.items():\n",
+    "    center_pos = (min(positions) + max(positions)) / 2\n",
+    "    plt.text(\n",
+    "        center_pos,\n",
+    "        y_max * 0.92,\n",
+    "        cat,\n",
+    "        ha=\"center\",\n",
+    "        va=\"center\",\n",
+    "        fontweight=\"bold\",\n",
+    "        fontsize=12,\n",
+    "        bbox=dict(\n",
+    "            boxstyle=\"round,pad=0.3\",\n",
+    "            facecolor=category_colors[cat],\n",
+    "            alpha=0.3,\n",
+    "            edgecolor=\"black\",\n",
+    "        ),\n",
+    "    )\n",
+    "\n",
+    "# Formatting\n",
+    "plt.xlabel(\"Attributes (grouped by category)\", fontsize=12)\n",
+    "plt.ylabel(\"F1 Score (%)\", fontsize=12)\n",
+    "plt.title(\"F1 Scores by Attribute - Prompting Results\", fontsize=20)\n",
+    "plt.grid(True, alpha=0.3, axis=\"y\")\n",
+    "\n",
+    "# Set x-axis labels\n",
+    "plt.xticks(x_pos, attributes_with_categories, rotation=45, ha=\"right\", fontsize=14, fontweight='bold')\n",
+    "plt.ylim(0, 110)\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
     "# Print summary statistics\n",
     "print(f\"\\nF1 Score Summary:\")\n",
-    "print(f\"Mean F1: {np.mean(f1_scores):.3f}\")\n",
-    "print(f\"Std F1:  {np.std(f1_scores):.3f}\")\n",
-    "print(f\"Min F1:  {np.min(f1_scores):.3f} ({attributes[np.argmin(f1_scores)]})\")\n",
-    "print(f\"Max F1:  {np.max(f1_scores):.3f} ({attributes[np.argmax(f1_scores)]})\")"
+    "print(f\"Mean F1: {np.mean(f1_scores_ordered):.3f}\")\n",
+    "print(f\"Std F1:  {np.std(f1_scores_ordered):.3f}\")\n",
+    "print(f\"Min F1:  {np.min(f1_scores_ordered):.3f} ({attributes_with_categories[np.argmin(f1_scores_ordered)]})\")\n",
+    "print(f\"Max F1:  {np.max(f1_scores_ordered):.3f} ({attributes_with_categories[np.argmax(f1_scores_ordered)]})\")\n",
+    "\n",
+    "# Print breakdown by category\n",
+    "print(f\"\\nF1 Score by Category:\")\n",
+    "print(\"-\" * 50)\n",
+    "for cat in unique_categories:\n",
+    "    cat_scores = [f1_scores_ordered[i] for i, c in enumerate(categories_ordered) if c == cat]\n",
+    "    if cat_scores:\n",
+    "        print(f\"{cat:<20}: Mean={np.mean(cat_scores):.3f}, Min={np.min(cat_scores):.3f}, Max={np.max(cat_scores):.3f}, n={len(cat_scores)}\")"
    ]
   }
  ],
