--- a/notebooks/prompting_results.ipynb
+++ b/notebooks/prompting_results.ipynb
@@ -34,7 +34,7 @@
     "import glob\n",
     "\n",
     "# Load all JSON files from a folder\n",
-    "results_folder = \"../results/paligemma2\"  # Update this path\n",
+    "results_folder = \"../results/week-34/\"  # Update this path\n",
     "\n",
     "# Get all JSON files in the folder\n",
     "json_files = glob.glob(os.path.join(results_folder, \"*.json\"))\n",
@@ -136,6 +136,45 @@
     "\n",
     "    analysis_results[file_key] = results\n",
     "    valid_dataframes[file_key] = valid_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate F1 scores for all attributes\n",
+    "f1_results = {}\n",
+    "\n",
+    "for file_key, valid_df in valid_dataframes.items():\n",
+    "    if len(valid_df) > 0:\n",
+    "        # Calculate F1 score\n",
+    "        f1 = f1_score(valid_df['label'], valid_df['predicted'])\n",
+    "        accuracy = accuracy_score(valid_df['label'], valid_df['predicted'])\n",
+    "        \n",
+    "        # Clean attribute name (remove filename prefix)\n",
+    "        if 'hf_inference_results_' in file_key:\n",
+    "            attribute_name = file_key.replace('hf_inference_results_', '')\n",
+    "        elif 'vllm_inference_results_' in file_key:\n",
+    "            attribute_name = file_key.replace('vllm_inference_results_', '')\n",
+    "        else:\n",
+    "            attribute_name = file_key\n",
+    "        \n",
+    "        f1_results[attribute_name] = {\n",
+    "            'f1_score': f1,\n",
+    "            'accuracy': accuracy,\n",
+    "            'valid_samples': len(valid_df),\n",
+    "            'total_samples': analysis_results[file_key]['total_samples']\n",
+    "        }\n",
+    "\n",
+    "# Display F1 results\n",
+    "print(\"F1 Scores by Attribute:\")\n",
+    "print(\"-\" * 50)\n",
+    "for attr, metrics in f1_results.items():\n",
+    "    print(f\"{attr:<20} F1: {metrics['f1_score']:.3f}  Acc: {metrics['accuracy']:.3f}  ({metrics['valid_samples']}/{metrics['total_samples']} samples)\")\n",
+    "\n",
+    "f1_results"
    ]
   },
   {
